<resources>
    <string name="app_name">GreaseWrench</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_name">Welcome To Grease Wrench</string>
    <string name="select_a_car">Select a Car</string>
    <string name="enter_new_Car">Enter New Car</string>
    <string name="about_text">The Car Maintenace Log App</string>
    <string name="about">About</string>
    <string name="enter_new_car_information">Enter New Car Information</string>
    <string name="car_make">Car Make:</string>
    <string name="car_model">Car Model:</string>
    <string name="car_year">Car Year:</string>
    <string name="car_mileage">Car Mileage:</string>
    <string name="submit_label">Submit</string>
    <string name="title_activity_car">Grease Wrench Options</string>
    <string name="enter_oil_change">Enter Oil Change</string>
    <string name="enter_new_maint">Enter New Maintenance</string>
    <string name="view_maint_history">Car Maintenance History</string>
    <string name="title_activity_enter_oil_change">Enter Oil Change</string>
    <string name="enter_date_label">Enter Date:</string>
    <string name="title_activity_select_car">Select A Car</string>
    <string name="oilChangeStr">Oil Change</string>
    <string name="title_activity_display_car_maint_hist">Car Maintenance History</string>
    <string name="title_activity_enter_car_maint">EnterCarMaintActivity</string>
    <string name="select_maintenance_type_label">Select Maintenance Type</string>
    <string name="enter_date_of_maintenace_performed_label">Enter Date of Maintenace Performed</string>
    <string name="enter_price_of_maintenance_label">Enter Price of Maintenance</string>
</resources>
